fix(notification): X button not always aligning to the right side

--- a/apps/web/src/components/bedrock/notification/notification.module.scss
+++ b/apps/web/src/components/bedrock/notification/notification.module.scss
@@ -27,6 +27,10 @@ $pixel: calc(g.$minecraftdepth * 2);
   justify-content: start;
 }
 
+.content {
+  width: 100%;
+}
+
 .icon {
   height: auto;
   width: 25px;
